фиксы qr