@@ -1,44 +1,61 @@
 package com.example.demo.controller;
 
-import com.example.demo.repository.BatchRepository;
-import com.example.demo.repository.LocationRepository;
-import com.example.demo.repository.ProductRepository;
 import com.example.demo.service.QrService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/api/qr")
 @RequiredArgsConstructor
 public class QrController {
-    private final QrService qr;
-    private final BatchRepository batchRepo;
-    private final ProductRepository productRepo;
-    private final LocationRepository locationRepo;
 
-    @GetMapping(value="/batch/{id}.png", produces = MediaType.IMAGE_PNG_VALUE)
-    public byte[] batchQr(@PathVariable long id, @RequestParam(defaultValue="256") int size) {
-        var b = batchRepo.findById(id).orElseThrow();
-        var payload = String.format(
-                "{\"t\":\"batch\",\"v\":1,\"id\":%d,\"p\":%d%s}",
-                b.getId(), b.getProduct().getId(),
-                b.getExpiryDate()!=null ? ",\"e\":\""+b.getExpiryDate()+"\"" : ""
-        );
-        return qr.generatePng(payload, size);
+    private final QrService qrService;
+    private final ObjectMapper om;
+
+    private String payload(String type, long id) {
+        try {
+            // {"t":"batch","id":123}
+            var node = om.createObjectNode();
+            node.put("t", type);
+            node.put("id", id);
+            return om.writeValueAsString(node);
+        } catch (Exception e) {
+            throw new IllegalStateException(e);
+        }
     }
 
-    @GetMapping(value="/product/{id}.png", produces = MediaType.IMAGE_PNG_VALUE)
-    public byte[] productQr(@PathVariable long id, @RequestParam(defaultValue="256") int size) {
-        productRepo.findById(id).orElseThrow();
-        var payload = String.format("{\"t\":\"product\",\"v\":1,\"id\":%d}", id);
-        return qr.generatePng(payload, size);
+    @GetMapping("/{type}/{id}.png")
+    public ResponseEntity<byte[]> qrGeneric(@PathVariable String type,
+                                            @PathVariable long id,
+                                            @RequestParam(defaultValue = "300") int size) {
+        String json = payload(type, id);
+        byte[] png = qrService.generatePng(json, size);
+        return ResponseEntity.ok()
+                .contentType(MediaType.IMAGE_PNG)
+                .header(HttpHeaders.CONTENT_DISPOSITION,
+                        "inline; filename=\"qr_%s_%d.png\"".formatted(type, id))
+                .body(png);
     }
 
-    @GetMapping(value="/loc/{id}.png", produces = MediaType.IMAGE_PNG_VALUE)
-    public byte[] locQr(@PathVariable long id, @RequestParam(defaultValue="256") int size) {
-        locationRepo.findById(id).orElseThrow();
-        var payload = String.format("{\"t\":\"loc\",\"v\":1,\"id\":%d}", id);
-        return qr.generatePng(payload, size);
+    @GetMapping("/batch/{id}.png")
+    public ResponseEntity<byte[]> qrBatch(@PathVariable long id,
+                                          @RequestParam(defaultValue = "300") int size) {
+        return qrGeneric("batch", id, size);
+    }
+
+    @GetMapping("/product/{id}.png")
+    public ResponseEntity<byte[]> qrProduct(@PathVariable long id,
+                                            @RequestParam(defaultValue = "300") int size) {
+        return qrGeneric("product", id, size);
+    }
+
+    @GetMapping("/loc/{id}.png")
+    public ResponseEntity<byte[]> qrLoc(@PathVariable long id,
+                                        @RequestParam(defaultValue = "300") int size) {
+        return qrGeneric("loc", id, size);
     }
 }
